trying to resolve connection issues
trying to resolve connection issues

--- a/COMP229-S2023-MidTerm-301289095/package.json
+++ b/COMP229-S2023-MidTerm-301289095/package.json
@@ -52,10 +52,10 @@
     "ExpressJS",
     "EJS"
   ],
-  "author": "Your Name Goes Here",
+  "author": "Hemal V",
   "license": "ISC",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/techbram/Comp229_Sec402_hemal_all_labs/issues"
   },
-  "homepage": ""
+  "homepage": "https://github.com/techbram/Comp229_Sec402_hemal_all_labs#readme"
 }
