--- a/COMP229-S2023-MidTerm-301289095/package.json
+++ b/COMP229-S2023-MidTerm-301289095/package.json
@@ -6,22 +6,21 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "bootstrap": "^4.5.2",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "bootstrap": "^4.6.0",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.5",
+    "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
-    "express-session": "^1.17.1",
-    "font-awesome": "^4.7.0",
-    "http-errors": "~1.6.2",
-    "jquery": "^3.5.1",
-    "mongoose": "^5.10.4",
-    "morgan": "~1.9.0",
-    "passport": "^0.4.1",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "express-session": "^1.17.3",
+    "http-errors": "~1.6.3",
+    "jquery": "^3.7.0",
+    "mongoose": "^7.3.0",
+    "morgan": "~1.9.1",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1",
+    "passport-local-mongoose": "^8.0.0",
     "popper.js": "^1.16.1"
   },
   "engines": {
