--- a/Week8/package.json
+++ b/Week8/package.json
@@ -10,6 +10,7 @@
     "npm": "9.5.1"
   },
   "dependencies": {
+    "@angular/cli": "^10.1.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^4.6.0",
     "connect-flash": "^0.1.1",
